--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     };
 
     
-    fetch("https://github.com/dharmeshabhinav/assets/datafetch.php", {
+    fetch("datafetch.php", {
       method: "POST",
       body: JSON.stringify(visitData),
       headers: {
